fhir integration checkpoint

--- a/container-support/compose/.env
+++ b/container-support/compose/.env
@@ -36,7 +36,7 @@ LFH_ORTHANC_HTTP_PORT=8042
 
 # lfh connect
 LFH_CONNECT_SERVICE_NAME=lfh
-LFH_CONNECT_IMAGE=docker.io/linuxforhealth/connect:snapshot
+LFH_CONNECT_IMAGE=docker.io/linuxforhealth/connect:dev
 LFH_CONNECT_MLLP_PORT=2576
 LFH_CONNECT_HTTP_PORT=8080
 
@@ -64,7 +64,6 @@ LFH_KONG_PLUGINS="bundled"
 
 # IBM FHIR
 IBM_FHIR_IMAGE=docker.io/ibmcom/ibm-fhir-server:4.4.0
-IBM_FHIR_HTTP_PORT=9080
 IBM_FHIR_HTTPS_PORT=9443
 
 # MSFT FHIR SQL
@@ -81,3 +80,7 @@ MSFT_FHIR_SQL_AUTO_UPDATE="true"
 MSFT_FHIR_DATASTORE="SqlServer"
 MSFT_FHIR_PORT=8080
 MSFT_FHIR_HOST_PORT=9090
+
+# Integration URLs
+MSFT_FHIR_URL=http:msft-fhir:8080
+IBM_FHIR_URL=https:ibm-fhir:9443/fhir-server/api/v4?authMethod=Basic&authenticationPreemptive=true&authUsername=fhiruser&authPassword=change-password
